# actix-demo

./: .gitignore  Cargo.toml  Dockerfile  config.yaml  todos.db  todos.db-shm  todos.db-wal
src/: lib.rs  main.rs
src/producer/: consumer.rs  mod.rs  service.rs
src/todo/: model.rs  service.rs
src/utils/: configuration.rs  error.rs  kafka.rs  mod.rs  opentelemetry.rs  prometheus.rs  response.rs  tracibility.rs
